<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:id="@+id/search_layout"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/search_layout_text"
            android:layout_weight="0.95"
            style="@style/Widget.AppCompat.EditText" />

        <Button
            android:text="SEARCH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_layout_button"
            android:layout_weight="0.05" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:id="@+id/users_list" />

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/menu_tabs"
        android:layout_weight="0.9">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu_tabs_chats"
            android:text="Chats" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu_tabs_search"
            android:text="Search Users" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu_tabs_current"
            android:text="Current Chat" />
    </android.support.design.widget.TabLayout>

</LinearLayout>
