...

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/username_input"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_row"
...
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_input"
            android:layout_weight="0.75" />

    </LinearLayout>

    <Button
        android:text="LOGIN"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/login_button"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/password_row"
        android:layout_weight="0.4"/>

    <Button
        android:text="REGISTER"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/register_button"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/password_row"
        android:layout_weight="0.4"/>

...
