...
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/reinput_password_input"
            android:layout_weight="0.75" />

    </LinearLayout>

    <Button
        android:text="REGISTER"
...
