...
    android:layout_height="match_parent"
    android:weightSum="2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/message_panel"
        android:layout_weight="0.2"
        android:gravity="bottom"
        android:textSize="18dp"/>

    <LinearLayout
        android:orientation="horizontal"
...
